# storage/api-docs/api-docs.json
@@ -1887,7 +1887,14 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Success"
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/RegisterResource"
+                                }
+                            }
+                        }
                     },
                     "401": {
                         "description": "Unauthorized"
@@ -2508,6 +2515,16 @@
                     },
                     "default": {
                         "type": "boolean"
+                    }
+                },
+                "type": "object"
+            },
+            "MepsRedirectResource": {
+                "title": "Meps Redirect Resource",
+                "description": "Resource of the Meps Redirect object",
+                "properties": {
+                    "redirect_url": {
+                        "type": "string"
                     }
                 },
                 "type": "object"
